--- a/FacultyApi/Properties/launchSettings.json
+++ b/FacultyApi/Properties/launchSettings.json
@@ -23,6 +23,8 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
+      "sqlDebugging": false,
+      "nativeDebugging": false,
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
