--- a/FacultyApiClientWinForms/FacultyApiClientWinForms - Backup.csproj
+++ b/FacultyApiClientWinForms/FacultyApiClientWinForms - Backup.csproj
@@ -9,16 +9,17 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="106.12.0" />
-    <PackageReference Include="Serilog" Version="2.10.0" />
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
-    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="Serilog.Sinks.WinForms" Version="2.3.1" />
   </ItemGroup>
 
   <ItemGroup>
     <None Update="app.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Enums\" />
   </ItemGroup>
 
 </Project>
