--- a/FacultyApi/appsettings.json
+++ b/FacultyApi/appsettings.json
@@ -1,13 +1,24 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Information",
+  //    "Microsoft": "Warning",
+  //    "Microsoft.Hosting.Lifetime": "Information"
+  //  }
+  //},
+  //"Serilog": {
+  //  "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
+  //  "MinimumLevel": "Debug",
+  //  "WriteTo": [
+  //    { "Name": "Console" },
+  //    {
+  //      "Name": "File",
+  //      "Args": { "path": "Logs/log.txt" }
+  //    }
+  //  ]
+  //},
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "FacultyDb": "server=localhost;user=Totoro;database=Faculty;password=1111;"
+    "ConnectionStrings": {
+      "FacultyDb": "server=192.168.1.3;user=Totoro;database=Faculty1;password=1111;"
+    }
   }
-}
