--- a/FacultyApi/Properties/launchSettings.json
+++ b/FacultyApi/Properties/launchSettings.json
@@ -19,6 +19,7 @@
     },
     "FacultyApi": {
       "commandName": "Project",
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
