--- a/FacultyApi/appsettings.json
+++ b/FacultyApi/appsettings.json
@@ -18,7 +18,8 @@
   //  ]
   //},
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "FacultyDb": "server=192.168.1.3;user=Totoro;database=Faculty1;password=1111;"
-    }
-  }
+  "ConnectionStrings": {
+    "FacultyDb": "Host=localhost;Username=postgres;Password=1234;Database=testdb"
+  },
+}
+  
