--- a/FacultyApi/appsettings.json
+++ b/FacultyApi/appsettings.json
@@ -17,9 +17,22 @@
   //    }
   //  ]
   //},
+
+  "AppSettings": {
+    "Secret": "Secret"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FacultyDb": "Host=localhost;Username=postgres;Password=1234;Database=testdb"
-  },
+  }
+
 }
-  
