--- a/FacultyApi/appsettings.json
+++ b/FacultyApi/appsettings.json
@@ -18,9 +18,10 @@
   //  ]
   //},
 
-  "Auth": {
-    "Secret": "Secret"
+  "AuthOptions": {
+    "Secret": "very_long_secret"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
